fdo#51550 fix DOCX export dataloss on non-math/chart OLE export

This is still not complete, but having the replacement graphic only is
far better than having nothing.

Change-Id: I141a3de1a449f4261c7086e10f2c141b3f6cdb10